Require Java 21 baseline